# shiny-ninja

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  Emulator.cpp  GBA.hpp
src/CPU/: CPU.cpp  CPU.hpp
src/Common/: Files.cpp  Files.hpp  GBA.hpp  Instruction.hpp  MathHelper.cpp  MathHelper.hpp  Utilities.cpp  Utilities.hpp
src/Common/Instructions/: ARMInstruction.cpp  ARMInstruction.hpp  Instruction.hpp  Instructions.cpp  ThumbInstruction.hpp
src/Common/Instructions/ARM/: BranchInstruction.cpp  BranchInstructions.cpp  BranchInstructions.hpp  DataProcessingInstructions.cpp  DataProcessingInstructions.hpp  LoadStoreInstructions.cpp  LoadStoreInstructions.h  LoadStoreInstructions.hpp  MultiplyAccumulateInstructions.cpp  MultiplyAccumulateInstructions.h  MultiplyAccumulateInstructions.hpp  PSRTransferInstructions.cpp  PSRTransferInstructions.hpp
src/Common/Instructions/Thumb/: BranchExchangeInstruction.cpp  BranchExchangeInstruction.hpp  DataProcessingInstructions.cpp  DataProcessingInstructions.hpp  LoadStoreInstructions.cpp  LoadStoreInstructions.hpp  MiscInstructions.cpp  MiscInstructions.hpp  RegisterInstructions.cpp  RegisterInstructions.hpp
src/DMA/: DMA.cpp  DMA.hpp
src/Decoder/: Decoder.cpp  Decoder.hpp
src/GPU/: GPU.cpp  GPU.hpp  LCD.cpp  LCD.hpp
src/Interpreter/: ARMInterpreters.cpp  Interpreter.cpp  Interpreter.hpp  ThumbInterpreters.cpp
src/Memory/: Memory.cpp  Memory.hpp  MemoryModule.hpp  VramModule.hpp  WramModule.hpp
src/Platform/: CMakeLists.txt  DisassemblerWindow.cpp  DisassemblerWindow.h  DisassemblerWindow.ui  Emulator.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NoGUI.cpp  NoGUI.hpp
tests/: CMakeLists.txt  main.cpp
tests/Decoder/: Decoder.cpp
tests/GPU/: GPU.cpp
tests/Instructions/ARM/: BranchInstructions.cpp  DataProcessingInstructions.cpp  LoadStoreInstructions.cpp
tests/Instructions/Thumb/: BranchInstructions.cpp  DataProcessingInstructions.cpp
tests/Misc/: Misc.cpp
